examples/valid/01_top_level_forward_function_value.lane
fn read_answer() -> Int {
  answer
}

let answer : Int = 42

