examples/invalid/04_empty_block_no_implicit_unit.lane
// invalid: empty blocks do not implicitly produce Unit
fn empty() -> Unit {
}

